in_silicoParser.py
# Generated from in_silico.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class in_silicoParser ( Parser ):

    grammarFileName = "in_silico.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'!'", "'@banger'", "'set'", "<INVALID>", 
                     "'drop bombs we'", "'back with a track called'", "'soaking through'", 
                     "'{'", "'}'", "'('", "')'", "','", "'+'", "'-'", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "PROGRAM_START", "VARIABLE_KEYWORD", 
                      "ASSIGNMENT_KEYWORD", "FUNCTION_KEYWORD", "RETURN_KEYWORD", 
                      "PRINT_KEYWORD", "BLOCK_START", "BLOCK_END", "ARGUMENT_LIST_START", 
                      "ARGUMENT_LIST_END", "ARGUMENT_LIST_SEPARATOR", "ADDITION_OPERATOR", 
                      "SUBTRACTION_OPERATOR", "MULTIPLICATION_OPERATOR", 
                      "DIVISION_OPERATOR", "NUMBER", "WHITESPACE", "NEWLINE", 
                      "IDENTIFIER" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_variable_declaration = 2
    RULE_function_declaration = 3
    RULE_function_call = 4
    RULE_print_statement = 5
    RULE_parameters = 6
    RULE_argument_list = 7
    RULE_expression = 8
    RULE_term = 9
    RULE_factor = 10

    ruleNames =  [ "program", "statement", "variable_declaration", "function_declaration", 
                   "function_call", "print_statement", "parameters", "argument_list", 
                   "expression", "term", "factor" ]

    EOF = Token.EOF
    T__0=1
    PROGRAM_START=2
    VARIABLE_KEYWORD=3
    ASSIGNMENT_KEYWORD=4
    FUNCTION_KEYWORD=5
    RETURN_KEYWORD=6
    PRINT_KEYWORD=7
    BLOCK_START=8
    BLOCK_END=9
    ARGUMENT_LIST_START=10
    ARGUMENT_LIST_END=11
    ARGUMENT_LIST_SEPARATOR=12
    ADDITION_OPERATOR=13
    SUBTRACTION_OPERATOR=14
    MULTIPLICATION_OPERATOR=15
    DIVISION_OPERATOR=16
    NUMBER=17
    WHITESPACE=18
    NEWLINE=19
    IDENTIFIER=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM_START(self):
            return self.getToken(in_silicoParser.PROGRAM_START, 0)

        def BLOCK_START(self):
            return self.getToken(in_silicoParser.BLOCK_START, 0)

        def BLOCK_END(self):
            return self.getToken(in_silicoParser.BLOCK_END, 0)

        def EOF(self):
            return self.getToken(in_silicoParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(in_silicoParser.StatementContext)
            else:
                return self.getTypedRuleContext(in_silicoParser.StatementContext,i)


        def getRuleIndex(self):
            return in_silicoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = in_silicoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(in_silicoParser.PROGRAM_START)
            self.state = 23
            self.match(in_silicoParser.BLOCK_START)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1048744) != 0):
                self.state = 24
                self.statement()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(in_silicoParser.BLOCK_END)
            self.state = 31
            self.match(in_silicoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration(self):
            return self.getTypedRuleContext(in_silicoParser.Variable_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(in_silicoParser.Function_declarationContext,0)


        def function_call(self):
            return self.getTypedRuleContext(in_silicoParser.Function_callContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(in_silicoParser.Print_statementContext,0)


        def getRuleIndex(self):
            return in_silicoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = in_silicoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 37
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.variable_declaration()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.function_declaration()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.function_call()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.print_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_KEYWORD(self):
            return self.getToken(in_silicoParser.VARIABLE_KEYWORD, 0)

        def IDENTIFIER(self):
            return self.getToken(in_silicoParser.IDENTIFIER, 0)

        def ASSIGNMENT_KEYWORD(self):
            return self.getToken(in_silicoParser.ASSIGNMENT_KEYWORD, 0)

        def expression(self):
            return self.getTypedRuleContext(in_silicoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return in_silicoParser.RULE_variable_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_declaration" ):
                listener.enterVariable_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_declaration" ):
                listener.exitVariable_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = in_silicoParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(in_silicoParser.VARIABLE_KEYWORD)
            self.state = 40
            self.match(in_silicoParser.IDENTIFIER)
            self.state = 41
            self.match(in_silicoParser.ASSIGNMENT_KEYWORD)
            self.state = 42
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_KEYWORD(self):
            return self.getToken(in_silicoParser.FUNCTION_KEYWORD, 0)

        def IDENTIFIER(self):
            return self.getToken(in_silicoParser.IDENTIFIER, 0)

        def parameters(self):
            return self.getTypedRuleContext(in_silicoParser.ParametersContext,0)


        def BLOCK_START(self):
            return self.getToken(in_silicoParser.BLOCK_START, 0)

        def BLOCK_END(self):
            return self.getToken(in_silicoParser.BLOCK_END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(in_silicoParser.StatementContext)
            else:
                return self.getTypedRuleContext(in_silicoParser.StatementContext,i)


        def RETURN_KEYWORD(self):
            return self.getToken(in_silicoParser.RETURN_KEYWORD, 0)

        def expression(self):
            return self.getTypedRuleContext(in_silicoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return in_silicoParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = in_silicoParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(in_silicoParser.FUNCTION_KEYWORD)
            self.state = 45
            self.match(in_silicoParser.IDENTIFIER)
            self.state = 46
            self.parameters()
            self.state = 47
            self.match(in_silicoParser.BLOCK_START)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1048744) != 0):
                self.state = 48
                self.statement()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 54
                self.match(in_silicoParser.RETURN_KEYWORD)
                self.state = 55
                self.expression()


            self.state = 58
            self.match(in_silicoParser.BLOCK_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(in_silicoParser.IDENTIFIER, 0)

        def parameters(self):
            return self.getTypedRuleContext(in_silicoParser.ParametersContext,0)


        def getRuleIndex(self):
            return in_silicoParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = in_silicoParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(in_silicoParser.IDENTIFIER)
            self.state = 61
            self.parameters()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT_KEYWORD(self):
            return self.getToken(in_silicoParser.PRINT_KEYWORD, 0)

        def expression(self):
            return self.getTypedRuleContext(in_silicoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return in_silicoParser.RULE_print_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_statement" ):
                listener.enterPrint_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_statement" ):
                listener.exitPrint_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_statement" ):
                return visitor.visitPrint_statement(self)
            else:
                return visitor.visitChildren(self)




    def print_statement(self):

        localctx = in_silicoParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_print_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(in_silicoParser.PRINT_KEYWORD)

            self.state = 64
            self.match(in_silicoParser.T__0)
            self.state = 65
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARGUMENT_LIST_START(self):
            return self.getToken(in_silicoParser.ARGUMENT_LIST_START, 0)

        def ARGUMENT_LIST_END(self):
            return self.getToken(in_silicoParser.ARGUMENT_LIST_END, 0)

        def argument_list(self):
            return self.getTypedRuleContext(in_silicoParser.Argument_listContext,0)


        def getRuleIndex(self):
            return in_silicoParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = in_silicoParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(in_silicoParser.ARGUMENT_LIST_START)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 68
                self.argument_list()


            self.state = 71
            self.match(in_silicoParser.ARGUMENT_LIST_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Argument_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(in_silicoParser.IDENTIFIER)
            else:
                return self.getToken(in_silicoParser.IDENTIFIER, i)

        def ARGUMENT_LIST_SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(in_silicoParser.ARGUMENT_LIST_SEPARATOR)
            else:
                return self.getToken(in_silicoParser.ARGUMENT_LIST_SEPARATOR, i)

        def getRuleIndex(self):
            return in_silicoParser.RULE_argument_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument_list" ):
                listener.enterArgument_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument_list" ):
                listener.exitArgument_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument_list" ):
                return visitor.visitArgument_list(self)
            else:
                return visitor.visitChildren(self)




    def argument_list(self):

        localctx = in_silicoParser.Argument_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argument_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(in_silicoParser.IDENTIFIER)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 74
                self.match(in_silicoParser.ARGUMENT_LIST_SEPARATOR)
                self.state = 75
                self.match(in_silicoParser.IDENTIFIER)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(in_silicoParser.TermContext)
            else:
                return self.getTypedRuleContext(in_silicoParser.TermContext,i)


        def ADDITION_OPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(in_silicoParser.ADDITION_OPERATOR)
            else:
                return self.getToken(in_silicoParser.ADDITION_OPERATOR, i)

        def SUBTRACTION_OPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(in_silicoParser.SUBTRACTION_OPERATOR)
            else:
                return self.getToken(in_silicoParser.SUBTRACTION_OPERATOR, i)

        def getRuleIndex(self):
            return in_silicoParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = in_silicoParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.term()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 82
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 83
                self.term()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(in_silicoParser.FactorContext)
            else:
                return self.getTypedRuleContext(in_silicoParser.FactorContext,i)


        def MULTIPLICATION_OPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(in_silicoParser.MULTIPLICATION_OPERATOR)
            else:
                return self.getToken(in_silicoParser.MULTIPLICATION_OPERATOR, i)

        def DIVISION_OPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(in_silicoParser.DIVISION_OPERATOR)
            else:
                return self.getToken(in_silicoParser.DIVISION_OPERATOR, i)

        def getRuleIndex(self):
            return in_silicoParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = in_silicoParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.factor()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15 or _la==16:
                self.state = 90
                _la = self._input.LA(1)
                if not(_la==15 or _la==16):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 91
                self.factor()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(in_silicoParser.NUMBER, 0)

        def ARGUMENT_LIST_START(self):
            return self.getToken(in_silicoParser.ARGUMENT_LIST_START, 0)

        def expression(self):
            return self.getTypedRuleContext(in_silicoParser.ExpressionContext,0)


        def ARGUMENT_LIST_END(self):
            return self.getToken(in_silicoParser.ARGUMENT_LIST_END, 0)

        def factor(self):
            return self.getTypedRuleContext(in_silicoParser.FactorContext,0)


        def SUBTRACTION_OPERATOR(self):
            return self.getToken(in_silicoParser.SUBTRACTION_OPERATOR, 0)

        def ADDITION_OPERATOR(self):
            return self.getToken(in_silicoParser.ADDITION_OPERATOR, 0)

        def IDENTIFIER(self):
            return self.getToken(in_silicoParser.IDENTIFIER, 0)

        def function_call(self):
            return self.getTypedRuleContext(in_silicoParser.Function_callContext,0)


        def getRuleIndex(self):
            return in_silicoParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = in_silicoParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(in_silicoParser.NUMBER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(in_silicoParser.ARGUMENT_LIST_START)
                self.state = 99
                self.expression()
                self.state = 100
                self.match(in_silicoParser.ARGUMENT_LIST_END)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 103
                self.factor()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.match(in_silicoParser.IDENTIFIER)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.function_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





